feat: 🎸 optimize styling

--- a/apps/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <main>
   <frontend-dashboard-links></frontend-dashboard-links>
   <frontend-weather-widget></frontend-weather-widget>
+  <frontend-dashboard-notification-section></frontend-dashboard-notification-section>
   <frontend-dashboard-document-section></frontend-dashboard-document-section>
 </main>
