--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -1,1 +1,3 @@
-<p>dashboard-notification-section works!</p>
+<h1>Announcements</h1>
+<hr />
+<frontend-car-notification-widget></frontend-car-notification-widget>
