--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
@@ -1,22 +1,16 @@
 <h2>Files from: {{ getTitle() }}</h2>
 <hr />
-<ng-container class="files" *ngIf="!isLoading">
-  <section class="image-list">
-    <ng-container class="image" *ngFor="let image of images">
-      <img [src]="image" alt="An image" class="image" />
-    </ng-container>
-  </section>
+<section class="image-list" *ngIf="!isLoading">
+  <ng-container class="image" *ngFor="let image of images">
+    <img [src]="image" alt="An image" class="image" />
+  </ng-container>
 
-  <br />
-
-  <section class="image-list">
-    <ng-container class="image" *ngFor="let video of videos">
-      <video class="video" controls>
-        <source [src]="video" />
-      </video>
-    </ng-container>
-  </section>
-</ng-container>
+  <ng-container class="image" *ngFor="let video of videos">
+    <video class="video" controls>
+      <source [src]="video" />
+    </video>
+  </ng-container>
+</section>
 
 <div *ngIf="isLoading" class="loading-icon">
   <p>Loading the files...</p>
