--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
@@ -1,10 +1,3 @@
-.files {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .image-list {
   display: flex;
   flex-direction: row;
@@ -15,7 +8,7 @@
 
 .image,
 .video {
-  height: 300px;
+  height: 500px;
   width: auto;
   margin: 10px 5px;
 }
@@ -25,4 +18,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+h2 {
+  margin-bottom: 0;
+}
+
+hr {
+  border-top: 2px solid grey;
 }
