--- a/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
@@ -1,1 +1,1 @@
-<div>{{ carList.length }}</div>
+<div>Future: {{ carList.length }} - Ready: {{ readyCarList.length }} - Overdue: {{ overdueCarList.length }} </div>
