--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -39,56 +39,80 @@
     <table mat-table [dataSource]="checkinLuggage" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item">{{ item.room }}</td>
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+          {{ item.room }}
+        </td>
       </ng-container>
       <!-- <ng-container matColumnDef="roomReady">
       <th mat-header-cell *matHeaderCellDef>Room<br />Status</th>
-      <td mat-cell *matCellDef="let item">{{ item.roomReady }}</td>
+      <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">{{ item.roomReady }}</td>
     </ng-container> -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let item">{{ item.name }}</td>
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+          {{ item.name }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="arrivalTime">
         <th mat-header-cell *matHeaderCellDef>Time of<br />arrival</th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
           {{ item.arrivalTime ? (item.arrivalTime | date : 'HH:mm') : '-' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bags">
         <th mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
-        <td mat-cell *matCellDef="let item">{{ item.bags }}</td>
+        <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
+          <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
+            <img
+              *ngIf="item.files.length > 0"
+              src="assets/icons/view-files-icon.svg"
+              alt="View files icon"
+            />
+            <span> {{ item.bags }} </span>
+          </div>
+        </td>
       </ng-container>
       <ng-container matColumnDef="tagNr">
         <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item">{{ item.tagNr }}</td>
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+          {{ item.tagNr }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="bbLr">
         <th mat-header-cell *matHeaderCellDef>BB in LR</th>
-        <td mat-cell *matCellDef="let item">{{ item.bbLr }}</td>
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+          {{ item.bbLr }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td mat-cell *matCellDef="let item">{{ item.location }}</td>
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+          {{ item.location }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>
           Time in<br />
           room
         </th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
           {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB up</th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
           {{ item.bbOut ? item.bbOut : '-' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item" class="comments-field">
+        <td
+          mat-cell
+          *matCellDef="let item"
+          (click)="openCheckinEditDialog(item)"
+          class="comments-field"
+        >
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
@@ -98,7 +122,6 @@
         mat-row
         [ngClass]="row.completedAt ? 'completed' : ''"
         *matRowDef="let row; columns: checkinColumns"
-        (click)="openCheckinEditDialog(row)"
       ></tr>
     </table>
 
