--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -47,71 +47,89 @@
     <table mat-table [dataSource]="filteredLuggage" *ngIf="!isLoading">
       <ng-container matColumnDef="dateIn">
         <th mat-header-cell *matHeaderCellDef>Date in</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
           {{ luggage.createdAt | date : 'dd/MM HH:mm' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let luggage">{{ luggage.room }}</td>
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
+          {{ luggage.room }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
           {{ luggage.name }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="nrOfBags">
         <th mat-header-cell *matHeaderCellDef>Nr. <br />of bags</th>
-        <td mat-cell *matCellDef="let luggage">
-          {{ luggage.bags }}
+        <td mat-cell *matCellDef="let luggage" (click)="viewFiles(luggage)">
+          <div [ngClass]="luggage.files.length > 0 ? 'view-files-wrapper' : ''">
+            <img
+              *ngIf="luggage.files.length > 0"
+              src="assets/icons/view-files-icon.svg"
+              alt="View files icon"
+            />
+            <span> {{ luggage.bags }} </span>
+          </div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let luggage" class="comments-field">
+        <td
+          mat-cell
+          *matCellDef="let luggage"
+          (click)="editLongTermListEntry(luggage)"
+          class="comments-field"
+        >
           {{ luggage.comments ?? '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="tagNr">
         <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let luggage">{{ luggage.tagNr }}</td>
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
+          {{ luggage.tagNr }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="dateNeeded">
         <th mat-header-cell *matHeaderCellDef>Date needed</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
           {{ luggage.dateNeeded ? (luggage.dateNeeded | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbLr">
         <th mat-header-cell *matHeaderCellDef>BB <br />in LR</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
           {{ luggage.bbLr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
           {{ luggage.location }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB out</th>
-        <td mat-cell *matCellDef="let luggage">{{ luggage.bbOut ?? '-' }}</td>
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
+          {{ luggage.bbOut ?? '-' }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="dateOut">
         <th mat-header-cell *matHeaderCellDef>Date out</th>
-        <td mat-cell *matCellDef="let luggage">
+        <td mat-cell *matCellDef="let luggage" (click)="editLongTermListEntry(luggage)">
           {{ luggage.completedAt ? (luggage.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
@@ -120,7 +138,6 @@
       <tr
         mat-row
         *matRowDef="let row; columns: displayedColumns"
-        (click)="editLongTermListEntry(row)"
         [ngClass]="row.completedAt ? 'completed' : ''"
         data-cy="long-term-list-entry"
       ></tr>
