--- a/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
@@ -22,7 +22,7 @@
           {{ option }}
         </mat-option>
       </mat-autocomplete>
-      <mat-error> Has to be one of the presented values </mat-error>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
   </div>
 
