--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
@@ -1,10 +1,13 @@
+
 <div class="blacklist-widget-container">
   <div class="table-spinner-full-size" *ngIf="isLoading">
-    <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+    <mat-icon><mat-spinner class="spinner" diameter="21"></mat-spinner></mat-icon>
   </div>
   <div class="image-container">
-    <ng-container *ngFor="let file of files; let i = index">
-      <img [src]="file" [ngClass]="{ hidden: i >= 2 }" class="image" />
+    <ng-container>
+      <span class="img-arrows" (click)="previousImage()">&lt;</span>
+      <img [src]="files[currentImage]" class="image" />
+      <span class="img-arrows" (click)="nextImage()">&gt;</span>
     </ng-container>
   </div>
 
