--- a/apps/frontend/src/app/pages/blacklist/blacklist.component.html
+++ b/apps/frontend/src/app/pages/blacklist/blacklist.component.html
@@ -3,12 +3,8 @@
     <button mat-raised-button class="action-btn">Add blacklist <mat-icon>https</mat-icon></button>
   </div>
   <hr />
-
   <section class="blacklist-container" *ngIf="!isLoading">
-    <frontend-blacklist-widget
-      [blacklist]="blacklist"
-      *ngFor="let blacklist of blacklistList"
-    >
+    <frontend-blacklist-widget [blacklist]="blacklist" *ngFor="let blacklist of blacklistList">
     </frontend-blacklist-widget>
   </section>
   <div class="table-spinner-full-size" *ngIf="isLoading">
