Refactor title logic

--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
@@ -1,4 +1,4 @@
-<h2>Files from: {{ getTitle() }}</h2>
+<h2>Files from: {{ title }}</h2>
 <hr />
 <section class="image-list" *ngIf="!isLoading">
   <ng-container class="image" *ngFor="let image of images">
