--- a/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
@@ -15,9 +15,8 @@
 
     <mat-form-field>
       <mat-label>Task</mat-label>
-
-      <input #task matInput formControlName="task" [matAutocomplete]="auto" />
-      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+      <input #task matInput formControlName="task" [matAutocomplete]="taskOptions" />
+      <mat-autocomplete autoActiveFirstOption #taskOptions="matAutocomplete">
         <mat-option *ngFor="let option of filteredTasks | async" [value]="option">
           {{ option }}
         </mat-option>
@@ -27,38 +26,26 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off">
+    <mat-form-field>
       <mat-label>Requested by</mat-label>
-      <mat-select formControlName="requestedBy">
-        <mat-option *ngFor="let requestedBy of bbAssignmentRequestedBy" [value]="requestedBy">
-          {{ requestedBy }}
+      <input matInput formControlName="requestedBy" [matAutocomplete]="requestByOptions" />
+      <mat-autocomplete autoActiveFirstOption #requestByOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredRequestedBy | async" [value]="option">
+          {{ option }}
         </mat-option>
-      </mat-select>
-      <mat-error
-        *ngIf="
-          createAssignmentForm.get('requestedBy')?.invalid &&
-          createAssignmentForm.get('requestedBy')?.dirty
-        "
-      >
-        Can't be more than 20 characters
-      </mat-error>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off">
+    <mat-form-field>
       <mat-label>Performed by</mat-label>
-      <mat-select formControlName="performedBy">
-        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
-          {{ initials }}
+      <input matInput formControlName="performedBy" [matAutocomplete]="performedByOptions" />
+      <mat-autocomplete autoActiveFirstOption #performedByOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredPerformedBy | async" [value]="option">
+          {{ option }}
         </mat-option>
-      </mat-select>
-      <mat-error
-        *ngIf="
-          createAssignmentForm.get('performedBy')?.invalid &&
-          createAssignmentForm.get('performedBy')?.dirty
-        "
-      >
-        Can't be more than 20 characters
-      </mat-error>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
   </div>
 
