--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -13,6 +13,10 @@
   --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
   --main-blue-lowest-opacity: rgba(47, 47, 162, 0.1);
+  --main-blue-opacity-5: rgba(47, 47, 162, 0.05);
+  --main-blue-opacity-10: rgba(47, 47, 162, 0.10);
+  --main-blue-opacity-15: rgba(47, 47, 162, 0.15);
+  --main-blue-opacity-20: rgba(47, 47, 162, 0.20);
   --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
   --green: #13be2f;
   --grey: rgba(0, 0, 0, 0.2);
