feat: 🎸 update car notification data

--- a/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
@@ -1,1 +1,4 @@
-<div>Future: {{ carList.length }} - Ready: {{ readyCarList.length }} - Overdue: {{ overdueCarList.length }} </div>
+<div>
+  Future: {{ carList.length }} - Ready: {{ readyCarList.length }} - Overdue:
+  {{ overdueCarList.length }}
+</div>
