--- a/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/create-assignment-dialog/create-assignment-dialog.component.html
@@ -5,12 +5,13 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Room nr.</mat-label>
-      <input #room type="number" formControlName="room" matInput placeholder="123" />
-      <mat-error
-        *ngIf="createAssignmentForm.get('room')?.invalid && createAssignmentForm.get('room')?.dirty"
-      >
-        Must be a number from 100-999
-      </mat-error>
+      <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
+      <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredRooms | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+      <mat-error> Has to be one of the presented values </mat-error>
     </mat-form-field>
 
     <mat-form-field>
