--- a/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
@@ -5,10 +5,13 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Room nr.</mat-label>
-      <input #room type="number" formControlName="room" matInput placeholder="Room number" />
-      <mat-error *ngIf="createBikeForm.get('room')?.invalid && createBikeForm.get('room')?.dirty">
-        Must be a number from 100-999
-      </mat-error>
+      <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
+      <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredRooms | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off" class="full-width">
@@ -23,16 +26,18 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Reserved by</mat-label>
-      <mat-select formControlName="reservedBy">
-        <mat-option *ngFor="let reservedBy of bikeListReserved" [value]="reservedBy">
-          {{ reservedBy }}
+      <input
+        #reservedBy
+        matInput
+        formControlName="reservedBy"
+        [matAutocomplete]="reservedByOptions"
+      />
+      <mat-autocomplete autoActiveFirstOption #reservedByOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredBikesReserved | async" [value]="option">
+          {{ option }}
         </mat-option>
-      </mat-select>
-      <mat-error
-        *ngIf="createBikeForm.get('reservedBy')?.invalid && createBikeForm.get('reservedBy')?.dirty"
-      >
-        Required
-      </mat-error>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
