--- a/apps/frontend/src/app/pages/tasks/edit-task-dialog/edit-task-dialog.component.html
+++ b/apps/frontend/src/app/pages/tasks/edit-task-dialog/edit-task-dialog.component.html
@@ -4,14 +4,13 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Initials</mat-label>
-      <mat-select [(value)]="data.initials" formControlName="initials">
-        <mat-option *ngFor="let initials of bbInitials" [value]="initials">
-          {{ initials }}
+      <input #initials matInput formControlName="initials" [matAutocomplete]="initialsOptions" />
+      <mat-autocomplete autoActiveFirstOption #initialsOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredInitials | async" [value]="option">
+          {{ option }}
         </mat-option>
-      </mat-select>
-      <mat-error *ngIf="form.get('initials')?.invalid && form.get('initials')?.dirty">
-        Required
-      </mat-error>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
