Rename all forms to just 'form'

--- a/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
@@ -5,7 +5,7 @@
   (containsInvalidFilesEvent)="updateFilesStatus($event)"
 ></frontend-file-upload>
 
-<form [formGroup]="createAnnouncementForm" (submit)="onSubmit()" class="dialog-container">
+<form [formGroup]="form" (submit)="onSubmit()" class="dialog-container">
   <h1>Add Announcement</h1>
   <hr />
 
