--- a/apps/frontend/src/app/pages/cars/create-car-entry-dialog/create-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/create-car-entry-dialog/create-car-dialog.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="createCarForm" class="dialog-container">
+<form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <h1>Add Car</h1>
   <hr />
 
@@ -17,7 +17,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Tag nr.</mat-label>
       <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error *ngIf="createCarForm.get('tagNr')?.invalid && createCarForm.get('tagNr')?.dirty">
+      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
@@ -45,9 +45,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Name</mat-label>
       <input #name type="text" formControlName="name" matInput placeholder="Name" />
-      <mat-error *ngIf="createCarForm.get('name')?.invalid && createCarForm.get('name')?.dirty">
-        Required
-      </mat-error>
+      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
@@ -59,11 +57,7 @@
         matInput
         placeholder="AB12345"
       />
-      <mat-error
-        *ngIf="
-          createCarForm.get('licensePlate')?.invalid && createCarForm.get('licensePlate')?.dirty
-        "
-      >
+      <mat-error *ngIf="form.get('licensePlate')?.invalid && form.get('licensePlate')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
@@ -118,9 +112,7 @@
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
     <input #comments type="text" formControlName="comments" matInput placeholder="Comments" />
-    <mat-error
-      *ngIf="createCarForm.get('comments')?.invalid && createCarForm.get('comments')?.dirty"
-    >
+    <mat-error *ngIf="form.get('comments')?.invalid && form.get('comments')?.dirty">
       Required
     </mat-error>
   </mat-form-field>
