--- a/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
@@ -1,5 +1,5 @@
 <form
-  [formGroup]="createDocumentForm"
+  [formGroup]="form"
   (ngSubmit)="onSubmit()"
   class="dialog-container"
   data-cy="create-document-dialog"
