--- a/apps/frontend/src/app/pages/documents/update-document-dialog/update-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/update-document-dialog/update-document-dialog.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="updateDocumentForm" (ngSubmit)="onSubmit()" class="dialog-container">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Update document</h1>
   <hr />
 
