--- a/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
@@ -6,7 +6,7 @@
   (containsInvalidFilesEvent)="updateFilesStatus($event)"
 ></frontend-file-upload>
 
-<form [formGroup]="updateAnnouncementForm" (submit)="onSubmit()">
+<form [formGroup]="form" (submit)="onSubmit()">
   <h1>Update Announcement</h1>
   <hr />
 
