--- a/apps/frontend/src/app/pages/assignments/update-assignment-dialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/update-assignment-dialog/update-assignment-dialog.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="updateAssignmentForm" (ngSubmit)="onSubmit()" class="dialog-container">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Update assignment</h1>
   <hr />
 
@@ -35,11 +35,7 @@
       formControlName="comments"
       placeholder="Describe the task"
     ></textarea>
-    <mat-error
-      *ngIf="
-        updateAssignmentForm.get('comments')?.invalid && updateAssignmentForm.get('comments')?.dirty
-      "
-    >
+    <mat-error *ngIf="form.get('comments')?.invalid && form.get('comments')?.dirty">
       Can't be more than 1000 characters
     </mat-error>
   </mat-form-field>
