--- a/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
@@ -5,7 +5,7 @@
   (containsInvalidFilesEvent)="updateFilesStatus($event)"
 ></frontend-file-upload>
 
-<form (ngSubmit)="onSubmit()" [formGroup]="createCheckinForm" class="dialog-container">
+<form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <h1>Create check in</h1>
   <hr />
 
@@ -30,30 +30,20 @@
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Name</mat-label>
     <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
-    <mat-error
-      *ngIf="createCheckinForm.get('name')?.invalid && createCheckinForm.get('name')?.dirty"
-    >
-      Required
-    </mat-error>
+    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Nr of bags</mat-label>
       <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
-      <mat-error
-        *ngIf="createCheckinForm.get('bags')?.invalid && createCheckinForm.get('bags')?.dirty"
-      >
-        Required
-      </mat-error>
+      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
       <mat-label>Tag nr</mat-label>
       <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error
-        *ngIf="createCheckinForm.get('tagNr')?.invalid && createCheckinForm.get('tagNr')?.dirty"
-      >
+      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
@@ -104,9 +94,7 @@
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
     <textarea type="text" formControlName="comments" matInput placeholder="Comments"></textarea>
-    <mat-error
-      *ngIf="createCheckinForm.get('comments')?.invalid && createCheckinForm.get('comments')?.dirty"
-    >
+    <mat-error *ngIf="form.get('comments')?.invalid && form.get('comments')?.dirty">
       Can't be more than 1000 characters
     </mat-error>
   </mat-form-field>
