--- a/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="createCheckoutForm" class="dialog-container">
+<form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <h1>Create Check Out Luggage</h1>
   <hr />
 
@@ -17,31 +17,21 @@
     <mat-form-field autocomplete="off">
       <mat-label>Nr of bags</mat-label>
       <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
-      <mat-error
-        *ngIf="createCheckoutForm.get('bags')?.invalid && createCheckoutForm.get('bags')?.dirty"
-      >
-        Required
-      </mat-error>
+      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
     </mat-form-field>
   </div>
 
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Name</mat-label>
     <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
-    <mat-error
-      *ngIf="createCheckoutForm.get('name')?.invalid && createCheckoutForm.get('name')?.dirty"
-    >
-      Required
-    </mat-error>
+    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Tag nr.</mat-label>
       <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error
-        *ngIf="createCheckoutForm.get('tagNr')?.invalid && createCheckoutForm.get('tagNr')?.dirty"
-      >
+      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
