--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -1,5 +1,5 @@
 <form
-  [formGroup]="createLongTermForm"
+  [formGroup]="form"
   (ngSubmit)="onSubmit()"
   class="dialog-container"
   data-cy="long-term-create-dialog"
@@ -24,21 +24,13 @@
     <mat-form-field autocomplete="off">
       <mat-label>Name</mat-label>
       <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
-      <mat-error
-        *ngIf="createLongTermForm.get('name')?.invalid && createLongTermForm.get('name')?.dirty"
-      >
-        Required
-      </mat-error>
+      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off" class="input one-third">
       <mat-label>Nr of bags</mat-label>
       <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
-      <mat-error
-        *ngIf="createLongTermForm.get('bags')?.invalid && createLongTermForm.get('bags')?.dirty"
-      >
-        Required
-      </mat-error>
+      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -46,9 +38,7 @@
     <mat-form-field autocomplete="off" class="input one-third">
       <mat-label>Tag nr</mat-label>
       <input #tagNr type="text" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error
-        *ngIf="createLongTermForm.get('tagNr')?.invalid && createLongTermForm.get('tagNr')?.dirty"
-      >
+      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
