--- a/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
@@ -10,7 +10,7 @@
   <!-- Date in -->
   <div class="dialog-row"></div>
 
-  <mat-form-field autocomplete="off">
+  <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Room nr.</mat-label>
     <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
     <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
