--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -7,18 +7,16 @@
   <h1>Add long term</h1>
   <hr />
 
-  <div class="dialog-row">
-    <mat-form-field autocomplete="off">
-      <mat-label>Room nr.</mat-label>
-      <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
-      <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
-        <mat-option *ngFor="let option of filteredRooms | async" [value]="option">
-          {{ option }}
-        </mat-option>
-      </mat-autocomplete>
-      <mat-error> {{ getErrorMessage() }} </mat-error>
-    </mat-form-field>
-  </div>
+  <mat-form-field autocomplete="off" class="full-width">
+    <mat-label>Room nr.</mat-label>
+    <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
+    <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
+      <mat-option *ngFor="let option of filteredRooms | async" [value]="option">
+        {{ option }}
+      </mat-option>
+    </mat-autocomplete>
+    <mat-error> {{ getErrorMessage() }} </mat-error>
+  </mat-form-field>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
