--- a/apps/frontend/src/app/pages/bikes/update-bike-entry-dialog/update-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/update-bike-entry-dialog/update-bike-dialog.component.html
@@ -1,5 +1,8 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="updateBikeForm">
-  <h1>Update Bike</h1>
+  <div class="title-container">
+    <h1>Update Bike</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row">
