--- a/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
@@ -1,5 +1,8 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="createCheckoutForm" class="dialog-container">
-  <h1>Create Check Out Luggage</h1>
+  <div class="title-container">
+    <h1>Create Check Out</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row">
