--- a/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
@@ -1,5 +1,8 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="updateCheckoutForm" class="dialog-container">
-  <h1>Update Check Out</h1>
+  <div class="title-container">
+    <h1>Update Check Out</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row">
