--- a/apps/frontend/src/app/pages/documents/update-document-dialog/update-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/update-document-dialog/update-document-dialog.component.html
@@ -1,5 +1,8 @@
 <form [formGroup]="updateDocumentForm" (ngSubmit)="onSubmit()" class="dialog-container">
-  <h1>Update document</h1>
+  <div class="title-container">
+    <h1>Update Document</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row"></div>
