--- a/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
@@ -4,7 +4,10 @@
   class="dialog-container"
   data-cy="long-term-update-dialog"
 >
-  <h1>Update long term</h1>
+  <div class="title-container">
+    <h1>Update Long Term</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <!-- Date in -->
