--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
@@ -1,4 +1,7 @@
-<h2>Files from: {{ title }}</h2>
+<div class="title-container">
+  <h2>Files from: {{ title }}</h2>
+  <a mat-dialog-close type="button">X</a>
+</div>
 <hr />
 <section class="image-list" *ngIf="!isLoading">
   <ng-container class="image" *ngFor="let image of images">
