--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
@@ -27,3 +27,13 @@ h2 {
 hr {
   border-top: 2px solid grey;
 }
+
+.title-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-weight: 900;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin: 0 0 0.5em 0.5em;
+}
