--- a/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
@@ -1,5 +1,9 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="createBikeForm">
-  <h1>Add Bike</h1>
+  <div class="title-container">
+    <h1>Add Bike</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
+
   <hr />
 
   <div class="dialog-row">
