--- a/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
@@ -1,5 +1,8 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="updateCarForm" class="dialog-container">
-  <h1>Update Car</h1>
+  <div class="title-container">
+    <h1>Update Car</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row">
