--- a/apps/frontend/src/app/pages/checkin/update-checkin-dialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/update-checkin-dialog/update-checkin-dialog.component.html
@@ -7,7 +7,10 @@
 ></frontend-file-upload>
 
 <form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
-  <h1>Update Check In</h1>
+  <div class="title-container">
+    <h1>Update Check In</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row">
