--- a/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
@@ -4,7 +4,10 @@
   class="dialog-container"
   data-cy="create-document-dialog"
 >
-  <h1>Add document</h1>
+  <div class="title-container">
+    <h1>Add Document</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row"></div>
