--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -4,7 +4,10 @@
   class="dialog-container"
   data-cy="long-term-create-dialog"
 >
-  <h1>Add long term</h1>
+  <div class="title-container">
+    <h1>Add Long Term</h1>
+    <a mat-dialog-close type="button">X</a>
+  </div>
   <hr />
 
   <div class="dialog-row">
