--- a/apps/frontend/src/assets/styles/dialog.scss
+++ b/apps/frontend/src/assets/styles/dialog.scss
@@ -94,3 +94,12 @@ h1 {
     max-height: 90vh;
   }
 }
+
+.title-container {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 900;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin: 0 0 0.5em 0.5em;
+}
