--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -5,10 +5,13 @@
 
   /* Border */
   --border: 1px solid rgba(0, 0, 0, 0.2);
+  --border-color: rgba(0, 0, 0, 0.2);
+  --border-color-darker: rgba(0, 0, 0, 0.4);
 
   /* Colors */
   --extra-light-grey: #f1f1f1;
-  --danger-red: #f34d4d;
+  --danger-red: #F34D4D;
+
   --main-blue: #2f2fa2;
   --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
   --main-blue-lower-opacity: rgba(47, 47, 162, 0.2);
@@ -17,10 +20,14 @@
   --main-blue-opacity-10: rgba(47, 47, 162, 0.1);
   --main-blue-opacity-15: rgba(47, 47, 162, 0.15);
   --main-blue-opacity-20: rgba(47, 47, 162, 0.2);
+
   --action-gradient: linear-gradient(192.45deg, #f64c72 0%, #f64c72 0%, #fa7b34 100%);
   --green: #13be2f;
   --grey: rgba(0, 0, 0, 0.2);
   --lightblue: #ebebf6;
+  --light-yellow: #FFF971;
+  --yellow: #FDF53A;
+  --dark-yellow: #B3AB00;
 }
 
 html,
