--- a/apps/frontend/src/app/pages/cars/create-car-entry-dialog/create-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/create-car-entry-dialog/create-car-dialog.component.html
@@ -62,7 +62,7 @@
 
   <div class="dialog-row">
     <mat-form-field class="remove-error-message">
-      <mat-label>Expiration Date</mat-label>
+      <mat-label>Parking Expiration</mat-label>
       <input
         onclick="this.showPicker()"
         matInput
