--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -5,7 +5,7 @@
         <mat-label>Sort By</mat-label>
         <mat-select [(value)]="sortBy" (selectionChange)="fetchCarList()">
           <mat-option value="createdAt">Created at</mat-option>
-          <mat-option value="expirationDate">Expiration date</mat-option>
+          <mat-option value="expirationDate">Parking expiration</mat-option>
           <mat-option value="deliveryTime">Delivery time</mat-option>
           <mat-option value="pickUpTime">Pick up time</mat-option>
         </mat-select>
