fix: 🐛 minor table change

--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -88,7 +88,7 @@ td.mat-cell {
     // border-top: 1px solid var(--main-blue-low-opacity);
     min-width: 2vw;
     max-width: 10vw;
-    padding: 0 5px;
+    padding: 17px 5px;
     text-align: center;
     border: none;
 
