--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -38,11 +38,11 @@
         <th mat-header-cell *matHeaderCellDef>Title</th>
         <td
           mat-cell
-          *matCellDef="let element"
+          *matCellDef="let item"
           class="comments-field"
-          (click)="openEditAnnouncement(element)"
+          (click)="openEditAnnouncement(item)"
         >
-          {{ element.title }}
+          {{ item.title }}
         </td>
       </ng-container>
 
@@ -50,33 +50,33 @@
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td
           mat-cell
-          *matCellDef="let element"
+          *matCellDef="let item"
           class="comments-field"
-          (click)="openEditAnnouncement(element)"
+          (click)="openEditAnnouncement(item)"
         >
-          {{ element.comments }}
+          {{ item.comments }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="showFrom">
         <th mat-header-cell *matHeaderCellDef>Show <br />From</th>
-        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement(element)">
-          {{ element.showFrom | date : 'dd/MM/YY' }}
+        <td mat-cell *matCellDef="let item" (click)="openEditAnnouncement(item)">
+          {{ item.showFrom | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="showTo">
         <th mat-header-cell *matHeaderCellDef>Show <br />To</th>
-        <td mat-cell *matCellDef="let element" (click)="openEditAnnouncement(element)">
-          {{ element.showTo | date : 'dd/MM/YY' }}
+        <td mat-cell *matCellDef="let item" (click)="openEditAnnouncement(item)">
+          {{ item.showTo | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="files">
         <th mat-header-cell *matHeaderCellDef>Images</th>
-        <td mat-cell *matCellDef="let element" class="small-field">
-          <button mat-raised-button class="secondary-btn link" (click)="viewFiles(element)">
-            <img src="assets/icons/link-icon.svg" alt="link icon" class="link-icon" />
+        <td mat-cell *matCellDef="let item" class="small-field">
+          <button mat-raised-button class="secondary-btn" (click)="viewFiles(item)">
+            <img src="assets/icons/link-icon.svg" alt="link icon" class="link-icon" /> ({{item.files.length}})
           </button>
         </td>
       </ng-container>
@@ -85,12 +85,12 @@
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td
           mat-cell
-          *matCellDef="let element"
+          *matCellDef="let item"
           class="small-field"
-          (click)="openEditAnnouncement(element)"
+          (click)="openEditAnnouncement(item)"
         >
-          <div class="status" [ngClass]="getStatus(element.showFrom, element.showTo)">
-            {{ getStatus(element.showFrom, element.showTo) }}
+          <div class="status" [ngClass]="getStatus(item.showFrom, item.showTo)">
+            {{ getStatus(item.showFrom, item.showTo) }}
           </div>
         </td>
       </ng-container>
