--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -40,43 +40,43 @@
     <table mat-table [dataSource]="filteredBikeList" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
-          {{ element.room }}
+        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+          {{ item.room }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
-          {{ element.name }}
+        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+          {{ item.name }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="reservedBy">
         <th mat-header-cell *matHeaderCellDef>Reserved by</th>
-        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
-          {{ element.reservedBy }}
+        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+          {{ item.reservedBy }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="nrOfBikes">
         <th mat-header-cell *matHeaderCellDef>Nr. of bikes</th>
-        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
-          {{ element.nrOfBikes }}
+        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+          {{ item.nrOfBikes }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pickUpTime">
         <th mat-header-cell *matHeaderCellDef>Pick up time</th>
-        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
-          {{ element.pickUpTime ? (element.pickUpTime | date : 'dd/MM HH:mm') : '-' }}
+        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+          {{ item.pickUpTime ? (item.pickUpTime | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Returned</th>
-        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
-          {{ element.completedAt ? (element.completedAt | date : 'dd/MM HH:mm') : '-' }}
+        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
@@ -84,22 +84,22 @@
         <th mat-header-cell *matHeaderCellDef>Comments</th>
         <td
           mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
+          *matCellDef="let item"
+          (click)="openDialogEdit(item)"
           class="comments-field"
         >
-          {{ element.comments ? element.comments : '-' }}
+          {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bikeFormCompleted">
         <th mat-header-cell *matHeaderCellDef style="width: 80px">Bike form <br />completed</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let item">
           <label class="checkbox-container car-checkbox">
             <input
               type="checkbox"
-              [checked]="element.bikeFormCompleted"
-              (change)="updateBikeFormCompleted(element.bikeId, element.bikeFormCompleted)"
+              [checked]="item.bikeFormCompleted"
+              (change)="updateBikeFormCompleted(item.bikeId, item.bikeFormCompleted)"
             />
             <span class="checkmark" style="top: 0; margin-left: 20px"></span>
           </label>
