--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -40,13 +40,9 @@
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
         <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
-          {{ item.room }}
+          {{ item.room ? item.room : '-'}}
         </td>
       </ng-container>
-      <!-- <ng-container matColumnDef="roomReady">
-      <th mat-header-cell *matHeaderCellDef>Room<br />Status</th>
-      <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">{{ item.roomReady }}</td>
-    </ng-container> -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
@@ -63,11 +59,14 @@
         <th mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
         <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
           <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
-            <img
-              *ngIf="item.files.length > 0"
-              src="assets/icons/view-files-icon.svg"
-              alt="View files icon"
-            />
+            <span *ngIf="item.files.length > 0" class="file-number">
+              <img
+                class="image-icon"
+                src="assets/icons/view-files-icon.svg"
+                alt="View files icon"
+              />
+              ({{ item.files.length }})
+            </span>
             <span> {{ item.bags }} </span>
           </div>
         </td>
